fix(carousel): заменены overflow и фиксированные размеры на overflow-x clip и width 100%

--- a/src/common.blocks/carousel/carousel.scss
+++ b/src/common.blocks/carousel/carousel.scss
@@ -2,7 +2,6 @@
 @use '@/assets/scss/abstracts/mixins' as *;
 
 .carousel {
-	overflow: hidden;
-	width: 100svw;
-	height: 100svh;
+	overflow-x: clip;
+	width: 100%;
 }
